superset/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superset
spec:
  replicas: 1
  selector:
    matchLabels:
      app: superset
  template:
    metadata:
      labels:
        app: superset
    spec:
      containers:
        - name: superset
          image: apache/superset:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
          volumeMounts:
            - name: config
              mountPath: /config/
        - name: worker
          image: apache/superset:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
          command: ["celery", "--app=superset.tasks.celery_app:app", "worker"]
          volumeMounts:
            - name: config
              mountPath: /config/
        - name: beat
          image: apache/superset:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
          command: ["celery", "beat", "--app=superset.tasks.celery_app:app", "--pidfile", "/tmp/celerybeat.pid", "--schedule", "/tmp/celerybeat-schedule"]
          volumeMounts:
            - name: config
              mountPath: /config/
      volumes:
        - name: init
          configMap:
            name: superset-init
            defaultMode: 0777
        - name: config
          configMap:
            name: superset-config
