superset/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset
spec:
  ports:
    - port: 8088
  selector:
    app: superset
